gcc/testsuite/rust/rustc/ui/argument-suggestions/issue-112507_dg.rs
pub enum Value {
    Float(Option<f64>),
}

fn main() {
    let _a = Value::Float( // { dg-error ".E0061." "" { target *-*-* } }
        0,
        None,
        None,
        0,
    );
}

